--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -4,6 +4,17 @@
     --bacon: #c06c85;
     --blueberry: #6c5c7c;
     --blueberry-light: #345d7e;
+    --denial-red: #e44d42;
+
+    --charcoal: #4c4c4c;
+    --charcoal-light: #646464;
+    --burnt-log: #2d2d2d;
+
+    --lime: #6ab04c;
+    --lime-light: #2ecb70;
+    --lime-dark: #4cd137;
+    
+
 }
 
 * {
@@ -71,6 +82,9 @@ body {
     background-color: var(--peach);
 }
 
+.button-link:hover {
+    background-color: var(--salmon);
+}
 
 .button-link::after {
     background-color: #ff00ea;
@@ -231,3 +245,23 @@ body {
     border-width: 0 3px 3px 0;
     transform: rotate(45deg);
 }
+
+
+/* #################################################################### */
+/*                          override default scroll                     */
+/* #################################################################### */
+
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: var(--burnt-log);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--charcoal);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--charcoal-light);
+}
+
